# GrowwBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pytest.ini  render.yaml
phase-1/: .gitignore  README.md  pyproject.toml
phase-1/app/: __init__.py  api.py
phase-1/app/compose/: __init__.py  composer.py  llm_config.py  prompts.py
phase-1/app/guards/: __init__.py  intent.py  output_guard.py  pii.py
phase-1/config/: __init__.py  aliases.yaml  llm.yaml  sections.yaml  sources.yaml
phase-1/eval/: __init__.py  run_eval.py
phase-1/ingest/: __init__.py  aliases.py  build_index.py  chunker.py  cleaner.py  fetcher.py  field_detector.py  parser_html.py  pipeline.py  sections.py  sources.py  url_utils.py
phase-1/retrieval/: __init__.py  bm25.py  embedder.py  hybrid_retriever.py  vector_store.py
phase-1/scripts/: verify_phase1.py
phase-1/tests/: conftest.py  test_aliases.py  test_llm_config.py  test_sections.py  test_sources.py  test_url_utils.py
phase-10/: README.md  observability.md  pyproject.toml  security.md
phase-10/mf_phase10/: __init__.py  log_scan.py  ops_check.py  refresh.py
phase-10/phase10_tests/: test_refresh.py
phase-10/reports/: .gitignore  last_refresh.json
phase-10/runbooks/: README.md  deploy.md  inaccurate-answer.md  llm-outage.md  stale-source.md  vector-store-corruption.md
phase-10/scripts/: deploy.ps1  run_scheduler_once.ps1  verify_phase10.ps1
phase-10/workflows/: corpus-refresh-watchdog.yml  corpus-refresh.yml
phase-2/: .gitignore  README.md  pyproject.toml
phase-2/mf_ingest/: __init__.py  cli.py  cloudflare.py  encoding.py  etag_cache.py  fetcher.py  models.py  parser_html.py  paths.py  pipeline.py  robots.py  soft404.py  verify_sources.py
phase-2/phase2_tests/: conftest.py  test_encoding.py  test_fetcher.py  test_guards.py  test_header_card_facts.py  test_parser_html.py  test_verify_sources.py
phase-3/: .gitignore  README.md  pyproject.toml
phase-3/data/: chunks.jsonl
phase-3/mf_clean/: __init__.py  chunk_models.py  chunk_schema.py  chunker.py  cleaner.py  cli.py  corpus_stats.py  field_detector.py  groww_clean.py  paths.py
phase-3/phase3_tests/: conftest.py  test_chunk_schema.py  test_chunker.py  test_cleaner.py  test_corpus_stats.py  test_field_detector.py  test_groww_clean.py
phase-4/: .gitignore  README.md  pyproject.toml
phase-4/config/: bm25_stopwords.txt
phase-4/data/index/: embeddings.parquet  index_manifest.json
phase-4/data/index/bm25/: bm25.pkl  meta.json
phase-4/data/index/chroma/: chroma.sqlite3
phase-4/mf_index/: __init__.py  bm25_index.py  build_index.py  cli.py  embedder.py  export_embeddings.py  hybrid.py  lockfile.py  models.py  normalize.py  paths.py  sources.py  vector_store.py
phase-4/phase4_tests/: conftest.py  test_build_index.py  test_chunks_path.py  test_embedder.py
phase-4/phase4_tests/fixtures/: sample_chunks.jsonl
phase-5/: .gitignore  README.md  pyproject.toml
phase-5/config/: advisory_patterns.yaml  corpus_scope.yaml  field_synonyms.yaml  injection_patterns.yaml  pii_patterns.yaml  query_rewrites.yaml
phase-5/mf_guard/: __init__.py  cli.py  config_loader.py  contextual_reply.py  conversational.py  corpus_catalog.py  follow_up.py  intent.py  models.py  paths.py  phase1_bridge.py  pii.py  pipeline.py  rewriter.py  scheme_field.py  templates.py
phase-5/phase5_tests/: conftest.py  test_contextual_reply.py  test_conversational.py  test_cooccurrence_scheme.py  test_corpus_catalog.py  test_follow_up.py  test_intent.py  test_pii.py  test_pipeline.py  test_smalltalk.py  test_templates.py
phase-5/phase5_tests/fixtures/: advisory_queries.txt
phase-6/: README.md  pyproject.toml
phase-6/config/: retrieval.yaml
phase-6/mf_retrieve/: __init__.py  boosts.py  cli.py  config_loader.py  consolidate.py  filters.py  models.py  paths.py  pipeline.py  query_shape.py  reranker.py  retriever.py  scoring.py  templates.py
phase-6/phase6_tests/: conftest.py  test_boosts.py  test_fact_queries.py  test_integration.py  test_nav_integration.py  test_retriever_unit.py  test_scheme_only_query.py  test_scoring.py
phase-7/: README.md  pyproject.toml
phase-7/config/: banned_tokens.yaml
phase-7/mf_compose/: __init__.py  cli.py  composer.py  groq_client.py  llm_config.py  models.py  output_guard.py  paths.py  pipeline.py  prompts.py  sources.py
phase-7/phase7_tests/: conftest.py  test_compose_pipeline.py  test_output_guard.py  test_smalltalk_llm.py
phase-8/: README.md  pyproject.toml
phase-8/config/: api.yaml  portfolio_weights.yaml  sample_questions.yaml
phase-8/data/: insights.json
phase-8/mf_api/: __init__.py  app.py  bootstrap.py  cli.py  config.py  metrics.py  paths.py  rate_limit.py  schemas.py  service.py
phase-8/mf_insights/: __init__.py  builder.py  cli.py  loader.py  paths.py
phase-8/phase8_tests/: conftest.py  test_api_chat.py  test_bootstrap.py  test_cors_config.py  test_insights_builder.py  test_rate_limit.py
phase-8/scripts/: render-build.sh
phase-8/web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
phase-8/web/app/: globals.css  layout.tsx
phase-8/web/components/: ChatApp.tsx  ChatHeader.tsx  ChatInput.tsx  GrowwLogo.tsx  Icons.tsx  InfoNotice.tsx  LlmStatusButton.tsx  LoadingSkeleton.tsx  MessageBubble.tsx  MobileDrawer.tsx  QuickPrompts.tsx  ReplyChips.tsx  SampleQuestions.tsx  SessionListItem.tsx  Sidebar.tsx
phase-8/web/components/market/: GlassCard.tsx  InsightsPageHeader.tsx  (+2 more)
phase-8/web/lib/: answerSegments.ts  api.ts  chatStorage.ts  extractSource.test.ts  extractSource.ts  parseAnswer.test.ts  parseAnswer.tsx  pii.test.ts  pii.ts  types.ts  views.ts
phase-9/: README.md  pyproject.toml
phase-9/config/: qa_set.yaml  targets.yaml  tolerances.yaml
phase-9/eval/: .gitignore
phase-9/mf_eval/: __init__.py  checks.py  cli.py  loaders.py  models.py  paths.py  report.py  runner.py  stub_llm.py  validator.py
phase-9/phase9_tests/: test_checks.py  test_runner_smoke.py  test_validator.py
phase-9/scripts/: generate_qa_set.py
(+38 files in other folders)
