[project]
name = "mf-ingest-phase2"
version = "0.1.0"
description = "Phase 2 — Groww corpus fetch + HTML parse (MF FAQ assistant)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
  "tenacity>=8.2",
  "trafilatura>=1.8",
  "selectolax>=0.3",
  "beautifulsoup4>=4.12",
  "pyyaml>=6.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mf-ingest = "mf_ingest.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mf_ingest*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["phase2_tests"]
pythonpath = [".", ".."]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
