[project]
name = "mf-clean-phase3"
version = "0.1.0"
description = "Phase 3 — text cleaning & chunking (MF FAQ assistant)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mf-chunk = "mf_clean.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mf_clean*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["phase3_tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
