[project]
name = "mf-guard-phase5"
version = "0.1.0"
description = "Phase 5 query understanding and pre-retrieval guardrails"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mf-guard = "mf_guard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mf_guard*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["phase5_tests"]
pythonpath = [".", "..", "../phase-1"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
