[project]
name = "mf-api-phase8"
version = "0.1.0"
description = "Phase 8 — FastAPI HTTP API (backend for UI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
stack = [
  "mf-compose-phase7",
]
index = [
  "chromadb>=0.5",
  "rank-bm25>=0.2",
  "sentence-transformers>=3.0",
  "portalocker>=2.8",
  "rapidfuzz>=3.6",
  "groq>=0.13",
]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
mf-api = "mf_api.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mf_api*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["phase8_tests"]
pythonpath = [".", "..", "../phase-1", "../phase-4", "../phase-5", "../phase-6", "../phase-7"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
