[project]
name = "mf-eval-phase9"
version = "0.1.0"
description = "Phase 9 — evaluation harness (QA set, metrics, report)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
stack = [
  "mf-api-phase8",
]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
mf-eval = "mf_eval.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mf_eval*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["phase9_tests"]
pythonpath = [".", "..", "../phase-1", "../phase-4", "../phase-5", "../phase-6", "../phase-7", "../phase-8"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
